Sync 'network' applications with LE 7.0 (except bluez)

--- a/packages/network/samba/config/smb.conf
+++ b/packages/network/samba/config/smb.conf
@@ -21,7 +21,7 @@
 # available from your machine
 
 [global]
-  server string = OpenELEC
+  server string = LibreELEC
   workgroup = WORKGROUP
   netbios name = %h
   security = share
@@ -158,3 +158,11 @@
   public = yes
   writable = yes
   root preexec = mkdir -p /storage/backup
+
+[Picons]
+  path = /storage/picons
+  available = yes
+  browsable = yes
+  public = yes
+  writable = yes
+  root preexec = mkdir -p /storage/picons/tvh /storage/picons/vdr
