--- a/packages/network/samba/default.d/samba.conf
+++ b/packages/network/samba/default.d/samba.conf
@@ -1,4 +1,4 @@
 SAMBA_AUTOSHARE="true"
-SAMBA_USERNAME="openelec"
-SAMBA_PASSWORD="openelec"
+SAMBA_USERNAME="libreelec"
+SAMBA_PASSWORD="libreelec"
 SAMBA_SECURE="false"
