--- a/packages/network/connman/config/hosts.conf
+++ b/packages/network/connman/config/hosts.conf
@@ -4,7 +4,7 @@
 # IP addresses
 
 # Format:  <ipaddress> <hostname1> <hostname2>
-# Example: 192.168.0.3 openelec openelec.mynetwork
+# Example: 192.168.0.3 libreelec libreelec.mynetwork
 
 # NOTE: do not edit /etc/hosts directly
 # edit /storage/.config/hosts.conf then reboot
