Sync 'sysutils' applications with LE 7.0 (except systemd)

--- a/packages/sysutils/busybox/system.d/var-log-debug.service
+++ b/packages/sysutils/busybox/system.d/var-log-debug.service
@@ -5,7 +5,7 @@ After=var.mount
 Before=systemd-journal-flush.service
 ConditionKernelCommandLine=!installer
 ConditionKernelCommandLine=|debugging
-ConditionPathExists=|/storage/.cache/debug.openelec
+ConditionPathExists=|/storage/.cache/debug.libreelec
 
 [Service]
 Type=oneshot
