--- a/packages/sysutils/amremote/system.d/amlogic-remotecfg.service
+++ b/packages/sysutils/amremote/system.d/amlogic-remotecfg.service
@@ -3,7 +3,7 @@ Description=Amlogic IR remote support
 
 [Service]
 Type=oneshot
-ExecStart=/bin/sh -c '[ -f /storage/.config/remote.conf ] && /usr/bin/remotecfg /storage/.config/remote.conf || /usr/bin/remotecfg /etc/remote.conf'
+ExecStart=/usr/lib/libreelec/remote-config
 RemainAfterExit=yes
 
 [Install]
