--- a/packages/sysutils/busybox/system.d/debug-shell.service
+++ b/packages/sysutils/busybox/system.d/debug-shell.service
@@ -4,7 +4,7 @@ Description=Debug Shell
 DefaultDependencies=no
 ConditionKernelCommandLine=|tty
 ConditionKernelCommandLine=|debugging
-ConditionPathExists=|/storage/.cache/debug.openelec
+ConditionPathExists=|/storage/.cache/debug.libreelec
 
 [Service]
 Environment=TTY=3
